hphp/hack/test/typecheck/refinements/inter_shapes.php.exp
File "inter_shapes.php", line 14, characters 34-35:
Invalid argument (Typing[4163])
File "inter_shapes.php", line 13, characters 13-13:
The field 'c' is optional
File "inter_shapes.php", line 28, characters 20-20:
The field 'c' is defined as required
File "inter_shapes.php", line 15, characters 31-32:
Invalid argument (Typing[4163])
File "inter_shapes.php", line 13, characters 13-13:
The field 'c' is optional
File "inter_shapes.php", line 28, characters 20-20:
The field 'c' is defined as required
File "inter_shapes.php", line 18, characters 15-16:
Invalid argument (Typing[4163])
File "inter_shapes.php", line 12, characters 15-15:
The field 'c' is optional
File "inter_shapes.php", line 28, characters 20-20:
The field 'c' is defined as required
File "inter_shapes.php", line 21, characters 21-22:
Invalid argument (Typing[4110])
File "inter_shapes.php", line 21, characters 12-18:
Expected nothing
File "inter_shapes.php", line 28, characters 20-20:
  via this generic T
File "inter_shapes.php", line 20, characters 13-13:
But got shape('d' => int)
File "inter_shapes.php", line 24, characters 15-16:
Invalid argument (Typing[4163])
File "inter_shapes.php", line 23, characters 13-13:
The field 'a' is optional
File "inter_shapes.php", line 28, characters 20-20:
The field 'a' is defined as required
